# vendetect

./: CODEOWNERS  Makefile  README.md  pyproject.toml
.github/workflows/: docs.yml  lint.yml  release.yml  tests.yml  zizmor.yml
src/vendetect/: __init__.py  __main__.py  _cli.py  comparison.py  copydetect.py  detector.py  diffing.py  errors.py  metrics.py  repo.py
test/: test_cli.py  test_detections.py  test_init.py  test_repo.py
