[project]
name = "vendetect"
version = "0.0.4"
description = "Command-line tool for automatically detecting vendored and copy/pasted code"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Trail of Bits", email = "opensource@trailofbits.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
    "copydetect>=0.5.0",
    "rich>=14.0.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
doc = ["pdoc"]
test = ["pytest", "pytest-cov", "pytest-timeout", "pretend", "coverage[toml]"]
lint = [
    # NOTE: ruff is under active development, so we pin conservatively here
    # and let Dependabot periodically perform this update.
    "ruff ~= 0.12.3",
    "pyright ~= 1.1",
    "types-html5lib",
    "types-requests",
    "types-toml",
]
dev = [
    {include-group = "doc"},
    {include-group = "test"},
    {include-group = "lint"},
]

[project.scripts]
"vendetect" = "vendetect._cli:main"

[project.urls]
Homepage = "https://pypi.org/project/vendetect"
Documentation = "https://trailofbits.github.io/vendetect/"
Issues = "https://github.com/trailofbits/vendetect/issues"
Source = "https://github.com/trailofbits/vendetect"

[tool.coverage.run]
# don't attempt code coverage for the CLI entrypoints
omit = ["src/vendetect/_cli.py"]

[tool.pyright]
include = ["src", "test"]
exclude = []
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportGeneralTypeIssues = "error"
typeCheckingMode = "basic"

[tool.ruff]
line-length = 120
include = ["src/**/*.py", "test/**/*.py"]

[tool.ruff.lint]
select = ["ALL"]
# D203 and D213 are incompatible with D211 and D212 respectively.
# COM812 and ISC001 can cause conflicts when using ruff as a formatter.
# See https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules.
ignore = ["ANN001", "ANN204", "D100", "D101", "D102", "D103", "D105", "D107", "D203", "D213", "COM812", "ISC001", "PGH003", "PT009"]

[tool.ruff.lint.per-file-ignores]
"src/vendetect/_cli.py" = [
    "T201", # allow `print` in cli module
]
"test/**/*.py" = [
    "D",    # no docstrings in tests
    "S101", # asserts are expected in tests
]

[tool.uv.sources]
vendetect = { workspace = true }

[tool.uv.build-backend]
module_name = "vendetect"
